# dirsplitter

./: Cargo.toml  README.md
src/: main.rs  read_dir.rs  split.rs  unsplit.rs
