[package]
name = "split"
version = "0.1.0"
authors = ["David Hilton <david.hilton.p@gmail.com>"]
edition = "2018"

[[bin]]
name = "split"
path = "src/split.rs"

[[bin]]
name = "unsplit"
path = "src/unsplit.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4.14"